# faers-db

./: .env  README.md  main.py  pyproject.toml
faersdb/: cli.py  config.py  db.py  detect.py  manifest.py  staging_load.py
faersdb/normalize/: demo.py  drug.py  indi.py  outc.py  reac.py  rpsr.py  ther.py
sql/: 001_init.sql
src/faersdb/: cli.py  config.py  detect.py  staging_load.py
src/faersdb/normalize/: demo.py
tests/: test_normalizers.py
